<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Higher</string>
    
    <string name="act_samp_form_time_limit">Duration (s)</string>
    <string name="act_samp_form_forever">Forever</string>
    <string name="act_samp_or">OR</string>
    <string name="act_samp_form_samples">Samples</string>
    <string name="act_samp_form_infinite_samples">Infinite</string>
    <string name="act_samp_button_record">Record</string>
    <string name="act_samp_button_record_complete">Record Complete</string>
    <string name="act_samp_button_resume">Resume</string>
    <string name="act_samp_button_pause">Pause</string>
    <string name="act_samp_button_reset">Reset</string>
    <string name="act_samp_button_analyse">Analyse</string>
    
    <string name="id_notif_svc_record">ca.concordia.datasample.notif_svc_record</string>
    <string name="notif_service">Step Counter</string>
    <string name="notif_service_stopped">Stopped</string>
    <string name="notif_service_record">Running</string>
    <string name="notif_service_pause">Paused</string>
    <string name="notif_service_finished">Done</string>
    <string name="notif_service_label_elapsed">Time Elapsed:</string>
    <string name="notif_service_label_samples">Steps:</string>
    
    <string name="act_anal_time">Total time</string>
    <string name="act_anal_events">Steps taken</string>
    <string name="act_anal_freq">Steps per minute</string>
    <string name="act_anal_average">Average</string>
    <string name="act_anal_energy">Energy (Calories)</string>
    <string name="act_anal_total_distance">Total Distance (m)</string>
    <string name="act_anal_absolute_distance">Absolute Distance (m)</string>
    <string name="act_samp_button_view">Step View</string>
    
    
    <string name="menu_main_act">Higher</string>
    <string name="menu_view_act">View</string>
    <string name="menu_compare_act">Compare</string>
    <string name="menu_settings_pane">Settings</string>
    <string name="settings_height">Height (m)</string>
    <string name="settings_weight">Weight (Kg)</string>
    <string name="settings_age">Age</string>
    <string name="settings_gender">Gender</string>
    <string name="settings_comp_rng">Workout Comparison Range</string>
    
    <string name="settings_height_prompt">Please select your height in meters</string>
    <string name="settings_weight_prompt">Please select your weight in kg</string>
    <string name="settings_age_prompt">Please select your age</string>
    <string name="setting_gender_prompt">Please indicate your sex</string>
    <string name="settings_compare_range_prompt">Select the number of workouts</string>
    
    </resources>
