<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ui_background">
    
<LinearLayout 
    android:id="@+id/topLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/workout_details"
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content" 
    	android:gravity="center"
    	android:textSize="32sp"
    	android:layout_marginTop="10dp"
	   	android:layout_marginBottom="10dp"
	  	android:layout_marginLeft="25dp"
	   	android:layout_marginRight="25dp"
    	android:text="Workout Details"
    	android:background="@drawable/workout_details_background"
        android:textColor="#F8F8FF"
        android:singleLine="true"/>
    <TextView
        android:id="@+id/workout_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:gravity="center"
	   	android:layout_marginBottom="10dp"
	  	android:layout_marginLeft="25dp"
	   	android:layout_marginRight="25dp"
	   	android:textSize="15sp"
		android:singleLine="true"
		android:background="@drawable/workout_details_background"
        android:textColor="#F8F8FF"
        android:text=" first workout detail date " /> 
</LinearLayout>
    
<TableLayout 
    style="@style/table_analyze"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1" 
    android:background="@android:color/white"
    android:layout_below="@id/topLayout">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textTitleTime"
            style="@style/title_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_anal_time" />

        <TextView
            android:id="@+id/textValueTime"
            style="@style/value_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textTitleEvents"
            style="@style/title_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_anal_events" />

        <TextView
            android:id="@+id/textValueEvents"
            style="@style/value_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textTitleEventFrequency"
            style="@style/header_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_anal_freq" />
        
        <TextView
            android:id="@+id/textValueEventFrequency"
            style="@style/value_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textTitleEnergy"
            style="@style/title_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_anal_energy" />

        <TextView
            android:id="@+id/textValueEnergy"
            style="@style/value_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textTitleTotalDistance"
            style="@style/title_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_anal_total_distance" />

        <TextView
            android:id="@+id/textValueTotalDistance"
            style="@style/value_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textTitleAbsoluteDistance"
            style="@style/title_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_anal_absolute_distance" />

        <TextView
            android:id="@+id/textValueAbsoluteDistance"
            style="@style/value_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>



</TableLayout>
<Button
	    android:id="@+id/show_graph_button"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:layout_alignParentBottom="true"
	    android:text="Show Graph"
	    android:textSize="16sp"
	    android:textColor="#ffffff"	    
	    android:background="@drawable/setting_button_background"
	    android:onClick="showgraph" />
</RelativeLayout>