<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ui_background">
    
    <LinearLayout
    android:id="@+id/topLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/workout_details"
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content" 
    	android:gravity="center"
    	android:textSize="32sp"
    	android:text="Workout Details"
    	android:background="@android:color/white"
        android:textColorLink="#FFFFFF"
        android:layout_marginBottom="15dp"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/workout_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:singleLine="true"
        android:text=" first workout detail date "
        android:textColorLink="#FFFFFF" />
    
</LinearLayout>

<TableLayout
    style="@style/table_analyze"
    android:id="@+id/first_table_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1" 
    android:background="@android:color/white"
    android:layout_below="@id/topLayout">
    

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textTitleTime"
            style="@style/title_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_anal_time" />

        <TextView
            android:id="@+id/textTotalTime1"
            style="@style/value_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textTitleEvents"
            style="@style/title_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_anal_events" />

        <TextView
            android:id="@+id/textSteps1"
            style="@style/value_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textTitleSpeed"
            style="@style/title_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_anal_freq" />

        <TextView
            android:id="@+id/textSpeed1"
            style="@style/value_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textTitleEnergy"
            style="@style/title_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_anal_energy" />

        <TextView
            android:id="@+id/textEnergy1"
            style="@style/value_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textTitleTotalDistance"
            style="@style/title_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_anal_total_distance" />

        <TextView
            android:id="@+id/textTotalDistance1"
            style="@style/value_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textTitleAbsoluteDistance"
            style="@style/title_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_anal_absolute_distance" />

        <TextView
            android:id="@+id/textAbsoluteDistance1"
            style="@style/value_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>

   

</TableLayout>
<LinearLayout
    android:id="@+id/second_workout_detail_Layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/first_table_layout"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/second_workout_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
		android:gravity="center"
		android:singleLine="true"
		android:background="@android:color/white"
        android:textColorLink="#FFFFFF"
        android:text="second workout detail date" />
    
</LinearLayout>
<TableLayout
    style="@style/table_analyze"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1" 
    android:background="@android:color/white"
    android:layout_below="@id/second_workout_detail_Layout">
    

    <TableRow
        android:id="@+id/second_tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/second_textTitleTime"
            style="@style/title_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_anal_time" />

        <TextView
            android:id="@+id/textTotalTime2"
            style="@style/value_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/second_tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/second_textTitleEvents"
            style="@style/title_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_anal_events" />

        <TextView
            android:id="@+id/textSteps2"
            style="@style/value_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/second_tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/second_textTitleEventFrequency"
            style="@style/title_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_anal_freq" />

        <TextView
            android:id="@+id/textSpeed2"
            style="@style/value_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/second_tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/second_textTitleEnergy"
            style="@style/title_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_anal_energy" />

        <TextView
            android:id="@+id/textEnergy2"
            style="@style/value_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/second_tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/second_textTitleTotalDistance"
            style="@style/title_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_anal_total_distance" />

        <TextView
            android:id="@+id/textTotalDistance2"
            style="@style/value_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/second_tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/second_textTitleAbsoluteDistance"
            style="@style/title_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_anal_absolute_distance" />

        <TextView
            android:id="@+id/textAbsoluteDistance2"
            style="@style/value_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>



</TableLayout>



</RelativeLayout>